[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://UI/survey.gd" id="1_uvt5f"]

[node name="Survey" type="Node2D"]
script = ExtResource("1_uvt5f")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="SurveyContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = 340.0
offset_bottom = 620.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="CanvasLayer/SurveyContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Daily Survey"
horizontal_alignment = 1

[node name="QuestionsContainer" type="VBoxContainer" parent="CanvasLayer/SurveyContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="SubmitButton" type="Button" parent="CanvasLayer/SurveyContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Submit" 